--- a/web/index.html
+++ b/web/index.html
@@ -28,12 +28,16 @@
 
   <title>scanner</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.3.1/dist/jsQR.min.js"></script>
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
+  </script>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
-    <script src="https://cdn.jsdelivr.net/npm/jsqr@1.3.1/dist/jsQR.min.js"></script>
+
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
